# anbefalingssystem

./: .env.example  README.md  crawl.py  generator.py  main.py  model.py  pyproject.toml  settings.py  state.py  test.py
api/: v1.py
constants/: genres.py  providers.py
data/: top_rated_movies_10000.csv
ext/: crawl.py  film.sql
models/: __init__.py  cast.py  movie.py  review.py  users.py
